# espanso

./: .gitignore  Cargo.toml  Compilation.md
.devcontainer/features/x11-dependencies/: install.sh
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/scripts/: Dockerfile
.github/scripts/fedora/: Dockerfile
.github/scripts/ubuntu/: build_deb.sh
.github/workflows/: ci.yml  create-release-draft.yml  dev-release.yml  prod-release.yml
docs/: README.md  book.toml
docs/src/: SUMMARY.md  ch00-introduction.md  ch01-general-guidelines.md  ch02-building-and-compilation.md  ch02-linux.md  ch02-macos.md  ch02-windows.md  ch03-creating-a-pr.md  ch03-general-documentation.md  ch04-creating-a-pr.md  ch04-recipes-and-cookbook.md
espanso/: Cargo.toml
espanso-clipboard/src/: lib.rs
espanso-clipboard/src/win32/: mod.rs
espanso-config/: Cargo.toml
espanso-config/src/: lib.rs
espanso-config/src/config/: store.rs
espanso-engine/src/dispatch/: default.rs
espanso-engine/src/funnel/: default.rs
espanso-engine/src/process/: default.rs
espanso-inject/: Cargo.toml
espanso-match/src/rolling/: matcher.rs
espanso-modulo/: Cargo.toml  build.rs
espanso-modulo/src/form/parser/: split.rs
espanso-modulo/src/search/: algorithm.rs
espanso-modulo/src/sys/interop/: mod.rs
espanso-modulo/src/sys/wizard/: mod.rs
espanso-modulo/src/wizard/: mod.rs
espanso-render/src/extension/: choice.rs  clipboard.rs  date.rs  form.rs  random.rs  script.rs  shell.rs
espanso-render/src/renderer/: mod.rs
espanso/src/: config.rs  exit_code.rs  lock.rs  main.rs
(+52 files in other folders)
