[package]
name = "espanso-modulo"
version = "0.1.0"
authors = ["Federico Terzi <federico-terzi@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
regex.workspace = true

[build-dependencies]
cc.workspace = true
regex.workspace = true
zip = "2.2.2"
winres = "0.1.11"
glob.workspace = true

[lints]
workspace = true
